resources/2021-11-30-traefik-tailscale-proxy/edge/ext-service-demo-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-demo-http
  namespace: traefik-system
spec:
  externalName: traefik-demo.local.10.73.131.216.sslip.io
  type: ExternalName
  ports:
  - port: 80
    name: http
